<?xml version="1.0"?>
<package>
  <name>cob_rosjava_extras</name>
  <version>0.1.0</version>
  <description>The cob_rosjava_extras package</description>

  <maintainer email="benjamin.maidel@ipa.fraunhofer.de">bnm</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_core</build_depend>

  <export>
  </export>
</package>